--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <title>Drum Kit</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
@@ -23,10 +23,9 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ 
     </footer>
   </footer>
-  <script src="./index.js"></script>
-</body>
+  <script src="index.js"></script>
 
 </html>
